-bug: Severe performance problems when adding data query based graphs.
-bug: Default refresh on Cacti Log was too quick
-bug: Some users don't like the idea of automatic page refreshes
-bug: Allow more rows to be visible in Cacti pages
-bug: Ping and SNMP should test both conditions
-bug: When step is less than poller interval, item will stop polling for long period of time
-feature#0001323: getting all graph template id associated to a host template 
-feature#0001289: Add "Graph Properties" wrench to tree+preview mode
-feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
-feature#0001250: Dispatching job in poller can lead to unbalanced threads 
-feature#0001235: CLI script needed to activate a query: add_data_query.php
-feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php
-feature#0001220: Disable snmpbulkwalk if $max_oids is less than 2 (was: CACTI run problem when trying to walk using SNMP Bulk Request)
-feature#0001205: add filtering and pagination to cdef management; add "Duplicate CDEF"
-feature#0001201: Reapply Suggested Names for Data Sources and cli/poller_data_sources_reapply_names.php
-feature#0001195: add graph title to graphs page
-feature#0001189: Introducing |data_source_title| variable
-feature#0001177: CLI Reindexing - poller_reindex_hosts.php: allow filter on "host description"
-feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
-feature#0001140: CLI-Script to associate a graph template to a host
-feature#0001082: Mirror Graph Rename based on template function to work with Data Sources
-feature#0000852: Have "Previous" and "Next" disappear when not in use (only for graph display)  
-feature#0000431: Add php-xml to requirements, verify required PHP extensions
-feature#0000284: Custom <path_rra> for each device
-feature: Paginate Treeview Dual Pane
-feature: Allow user to specify maximum graphs per page from Treeview Dual Pane